Create user signup web page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
             <li><a href="login/login.template.client.html">Login Screen</a></li>
             <li><a href="profile/profile.template.client.html">Profile Screen</a></li>
             <li><a href="editor/editor.template.client.html">Course Editor</a></li>
+            <li><a href="register/register.template.client.html">Register</a></li>
         </ul>
     </div>
 </body>
