Create profile web page

--- a/src/main/webapp/register/register.template.client.html
+++ b/src/main/webapp/register/register.template.client.html
@@ -24,7 +24,10 @@
             <label for="verify-password" class="col-lg-2 col-sm-3">Verify Password</label>
             <input id="verify-password" class="col-lg-10 col-sm-9" placeholder="123qwe#$%" />
         </div>
-        <a href="../profile/profile.template.client.html" class="btn btn-primary btn-block field">Sign up</a>
+        <div class="row field">
+            <label for="signup" class="col-lg-2 col-sm-3"></label>
+            <a href="../profile/profile.template.client.html" class="btn btn-primary btn-block field" id="signup">Sign up</a>
+        </div>
         <div class="row">
             <div class="col-sm-6">
                 <a href="../login/login.template.client.html">Login</a>
