--- a/src/main/webapp/profile/profile.template.client.html
+++ b/src/main/webapp/profile/profile.template.client.html
@@ -9,16 +9,13 @@
 <body>
     <div class="container">
         <h1>Profile</h1>
-        <div class="alert alert-danger" role="alert">
-            Danger!!
-        </div>
         <div class="alert alert-success" role="alert">
             Success!!
         </div>
         <div class="mb-3 row">
             <label for="username" class="col-sm-2 col-form-label">Username</label>
             <div class="col-sm-10">
-                <input type="text" readonly class="form-control" id="username" placeholder="alice" />
+                <input type="text" readonly class="form-control" id="username" placeholder="Alice" />
             </div>
         </div>
         <div class="mb-3 row">
@@ -30,7 +27,7 @@
         <div class="mb-3 row">
             <label for="phone" class="col-sm-2 col-form-label">Phone</label>
             <div class="col-sm-10">
-                <input type="tel" class="form-control" id="phone">
+                <input type="tel" class="form-control" id="phone" placeholder="(555) 123-4324">
             </div>
         </div>
         <div class="mb-3 row">
@@ -53,14 +50,20 @@
         <div class="mb-3 row">
             <label for="dob" class="col-sm-2 col-form-label">Date of Birth</label>
             <div class="col-sm-10">
-                <input type="date" class="form-control" id="dob" value="2021-01-25"
+                <input type="date" class="form-control" id="dob" placeholder="mm/dd/yyyy"
                        title="Please enter your date of birth">
             </div>
         </div>
         <div class="mb-3 row">
-            <label for="dob" class="col-sm-2 col-form-label"></label>
+            <label for="update" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
-                <a href="../index.html" class="btn btn-danger btn-block">Logout</a>
+                <a href="profile.template.client.html" class="btn btn-success btn-block" id="update">Update</a>
+            </div>
+        </div>
+        <div class="mb-3 row">
+            <label for="logout" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <a href="../index.html" class="btn btn-danger btn-block" id="logout">Logout</a>
             </div>
         </div>
     </div>
